# shuffle-sp1zkproof

./: Cargo.toml  demo.rs  shuffle_demo.rs
lib/: Cargo.toml
lib/src/: lib.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
server/: Cargo.toml
server/src/: main.rs
