[package]
name = "shuffle-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
hex = "0.4"
sha2 = "0.10"

# SP1 dependencies
sp1-sdk = "2.0.0"
sp1-build = "2.0.0"
alloy-sol-types = "0.7"

# Local dependencies
shuffle-lib = { path = "../lib" }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }

[build-dependencies]
sp1-build = "2.0.0"